created register page

--- a/Client/.env
+++ b/Client/.env
@@ -1,2 +1,5 @@
-REACT_APP_CLOUDINARY_CLOUD_NAME = dvjj6d6pg
+//REACT_APP_CLOUDINARY_CLOUD_NAME = dvjj6d6pg
+VITE_CLOUDINARY_CLOUD_NAME=dvjj6d6pg
 
+
+REACT_APP_BACKEND_URL =
