completed user registration functionality

--- a/Client/.env
+++ b/Client/.env
@@ -1,5 +1,10 @@
-//REACT_APP_CLOUDINARY_CLOUD_NAME = dvjj6d6pg
+# REACT_APP_CLOUDINARY_CLOUD_NAME = dvjj6d6pg
 VITE_CLOUDINARY_CLOUD_NAME=dvjj6d6pg
 
+VITE_BACKEND_URL = http://localhost:5000
 
-REACT_APP_BACKEND_URL =
+#const URL = `${import.meta.env.VITE_BACKEND_URL}/api/register`;
+
+# import.meta.env.VITE_BACKEND_URL
+
+# REACT_APP_BACKEND_URL =
