--- a/Client/.env
+++ b/Client/.env
@@ -3,6 +3,8 @@ VITE_CLOUDINARY_CLOUD_NAME=dvjj6d6pg
 
 VITE_BACKEND_URL = http://localhost:5000
 
+#primary_color = #00adb5
+
 #const URL = `${import.meta.env.VITE_BACKEND_URL}/api/register`;
 
 # import.meta.env.VITE_BACKEND_URL
