--- a/Client/package.json
+++ b/Client/package.json
@@ -12,12 +12,15 @@
   "dependencies": {
     "@reduxjs/toolkit": "^2.2.5",
     "axios": "^1.6.8",
+    "moment": "^2.30.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.2.1",
     "react-redux": "^9.1.2",
-    "react-router-dom": "^6.23.0"
+    "react-router-dom": "^6.23.0",
+    "socket.io-client": "^4.7.5",
+    "web-vitals": "^4.0.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
