--- a/Client/package.json
+++ b/Client/package.json
@@ -12,7 +12,6 @@
   "dependencies": {
     "@reduxjs/toolkit": "^2.2.5",
     "axios": "^1.6.8",
-    "flatted": "^3.3.1",
     "moment": "^2.30.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -20,6 +19,7 @@
     "react-icons": "^5.2.1",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.23.0",
+    "react-spinners": "^0.13.8",
     "socket.io-client": "^4.7.5",
     "web-vitals": "^4.0.0"
   },
