--- a/Client/.env
+++ b/Client/.env
@@ -1,7 +1,7 @@
 # REACT_APP_CLOUDINARY_CLOUD_NAME = dvjj6d6pg
 VITE_CLOUDINARY_CLOUD_NAME=dvjj6d6pg
 
-VITE_BACKEND_URL = https://real-time-chat-app-api-rho.vercel.app/
+VITE_BACKEND_URL = https://real-time-chat-app-api-rho.vercel.app
 
 #primary_color = #00adb5
 
